# eVTOL_sim

./: CMakeLists.txt  Makefile  README.md  eVTOL_sim_run.sh
eVTOLsim/includes/: aircraft.h
eVTOLsim/src/: sim_run.cpp  state_machine.cpp
includes/: aircraft.h  state_machine.h
src/: aircraft.cpp  sim_run.cpp  state_machine.cpp
